--- a/src/app/admin/views/noticia_lista.phtml
+++ b/src/app/admin/views/noticia_lista.phtml
@@ -30,7 +30,8 @@
                 <th style="width:2%;"><input type="checkbox" name="excluir[]" id="excluir_all" /></th>
                 <th style="width:5%;"><strong>Ativo</strong></th>
                 <th style="width:10%;"><strong>Data</strong></th>
-                <th style="width:25%;"><strong>Titulo</strong></th>
+                <th style="width:25%;"><strong>Categoria</strong></th>
+                <th><strong>Titulo</strong></th>
                 <th style="width:15%;" class="text-center"><strong>Ações</strong></th>
               </tr>
             </thead>
@@ -40,6 +41,7 @@
                   <td><input class="excluir" type="checkbox" name="excluir[]" id="exc_noticia_<?php echo $row['id_noticia']; ?>" /></td>
                   <td><input class="setAtivo" type="checkbox" <?php if ( $row['ativo'] == '1' ): ?> checked="checked"<?php endif; ?> id="<?php echo $row['id_noticia']; ?>" /></td>
                   <td><?php echo $data['DateFormat']::filter_date($row['data']); ?></td>
+                  <td><?php echo $row['categoria']; ?></td>
                   <td><?php echo $row['titulo']; ?></td>
                   <td class="text-center">
                     <a class="label label-default btn_edicao" href="<?php echo $row['id_noticia']; ?>">
