--- a/src/app/admin/views/includes/nav.phtml
+++ b/src/app/admin/views/includes/nav.phtml
@@ -29,6 +29,17 @@
         </ul>
       </li>
       <li>
+        <a href="#"><i class="fa fa-paperclip"></i>Páginas Insitucionais</a>
+        <ul class="sub-menu">
+          <li>
+            <a href="/admin/pagina_cat/lista/"><i class="fa fa-paperclip"></i>Menu</a>
+          </li>
+          <li>
+            <a href="/admin/pagina/lista/"><i class="fa fa-paperclip"></i>Páginas</a>
+          </li>
+        </ul>
+      </li>
+      <li>
         <a href="#"><i class="fa fa-smile-o"></i>Exemplos</a>
         <ul class="sub-menu">
           <li><a href="/admin/exemplo/lista/">Lista Completa</a></li>
