--- a/src/app/admin/views/includes/nav.phtml
+++ b/src/app/admin/views/includes/nav.phtml
@@ -3,7 +3,10 @@
   <div class="cl-navblock">
     <ul class="cl-vnavigation">
       <li>
-        <a href="/admin/configuracao/cadastro/"><i class="fa fa-home"></i>Configurações</a>
+        <a href="/admin/log/list/"><i class="fa fa-bug"></i>Log</a>
+      </li>
+      <li>
+        <a href="/admin/configuracao/cadastro/"><i class="fa fa-certificate"></i>Configurações</a>
       </li>
       <li>
         <a href="/admin/lixeira/lista/"><i class="fa fa-trash-o"></i>Lixeira</a>
