--- a/src/app/admin/views/pagina_cadastro.phtml
+++ b/src/app/admin/views/pagina_cadastro.phtml
@@ -31,6 +31,23 @@
             </div>
           </div>
 
+          <?php if ( @$data['table']['infinito'] ): ?>
+            <?php foreach ( $data['table']['infinito'] as $dropdown ): ?>
+              <div class="form-group drop_pagina_line">
+                <label class="col-sm-2 control-label">Página</label>
+                <div class="col-sm-10 drop_pagina_container">
+                  <?php echo $dropdown ?>
+                </div>
+              </div>
+            <?php endforeach; ?>
+          <?php else: ?>
+            <div class="form-group drop_pagina_line" style="display: none">
+              <label class="col-sm-2 control-label">Página</label>
+              <div class="col-sm-10 drop_pagina_container">
+              </div>
+            </div>
+          <?php endif; ?>
+
           <div class="form-group">
             <label class="col-sm-2 control-label">Título</label>
             <div class="col-sm-10">
