--- a/src/app/admin/views/pagina_cadastro.phtml
+++ b/src/app/admin/views/pagina_cadastro.phtml
@@ -33,17 +33,17 @@
 
           <?php if ( @$data['table']['infinito'] ): ?>
             <?php foreach ( $data['table']['infinito'] as $dropdown ): ?>
-              <div class="form-group drop_pagina_line">
+              <div class="form-group drop_infinity_line">
                 <label class="col-sm-2 control-label">Página</label>
-                <div class="col-sm-10 drop_pagina_container">
+                <div class="col-sm-10 drop_infinity_container">
                   <?php echo $dropdown ?>
                 </div>
               </div>
             <?php endforeach; ?>
           <?php else: ?>
-            <div class="form-group drop_pagina_line" style="display: none">
+            <div class="form-group drop_infinity_line" style="display: none">
               <label class="col-sm-2 control-label">Página</label>
-              <div class="col-sm-10 drop_pagina_container">
+              <div class="col-sm-10 drop_infinity_container">
               </div>
             </div>
           <?php endif; ?>
