--- a/src/app/admin/views/newscat_lista.phtml
+++ b/src/app/admin/views/newscat_lista.phtml
@@ -13,10 +13,10 @@
       <div class="content">
         <form method="get" class="form_search">
           <div class="col-sm-4 col-md-4 col-lg-2">
-            <input class="form-control" name="titulo" type="text" placeholder="Busca por titulo" value="<?php echo $data['busca']['titulo']; ?>">
+            <input class="form-control" name="title" type="text" placeholder="Busca por titulo" value="<?php echo $data['search']['title']; ?>">
           </div>
           <div class="col-sm-4 col-md-4 col-lg-2">
-            <?php echo $data['busca']['home']; ?>
+            <?php echo $data['search']['is_home']; ?>
           </div>
           <input type="button" value="Limpar" class="clean_search btn btn-default btn-rad" />
           <input type="submit" value="Buscar" class="btn btn-info btn-rad" />
@@ -41,13 +41,13 @@
             <tbody class="no-border-y">
               <?php foreach ( $data['list'] as $row ): ?>
                 <tr>
-                  <td><input class="excluir" type="checkbox" name="delete[]" id="del_NoticiaCat_<?php echo $row['id_noticia_cat']; ?>" /></td>
-                  <td><input class="setAtivo" type="checkbox" <?php if ( $row['active'] == '1' ): ?> checked="checked"<?php endif; ?> id="<?php echo $row['id_noticia_cat']; ?>" /></td>
-                  <td><?php echo $row['ordem']; ?></td>
-                  <td><?php echo $row['titulo']; ?></td>
-                  <td><?php echo $row['inc_data']; ?></td>
+                  <td><input class="excluir" type="checkbox" name="delete[]" id="del_<?php echo $this->_data['entity']['name']; ?>_<?php echo $row['id_news_cat']; ?>" /></td>
+                  <td><input class="setAtivo" type="checkbox" <?php if ( $row['active'] == '1' ): ?> checked="checked"<?php endif; ?> id="<?php echo $row['id_news_cat']; ?>" /></td>
+                  <td><?php echo $row['sequence']; ?></td>
+                  <td><?php echo $row['title']; ?></td>
+                  <td><?php echo $row['inc_date']; ?></td>
                   <td class="text-center">
-                    <a class="label label-default" href="/admin/news_cat/cadastro/<?php echo $row['id_noticia_cat']; ?>/">
+                    <a class="label label-default" href="/admin/<?php echo $this->_data['entity']['tbl']; ?>/save/<?php echo $row[$this->_data['entity']['id']]; ?>/">
                       <i class="fa fa-pencil"></i>
                     </a>
                     <a class="label label-danger delete_shortcut" href="#">
