--- a/src/app/admin/views/includes/nav.phtml
+++ b/src/app/admin/views/includes/nav.phtml
@@ -66,6 +66,12 @@
           </ul>
         </li>
       <?php endif; ?>
+      <?php if ( isset($data['permission']['Survey']) ): ?>
+        <li>
+          <a href="/admin/survey/list/"><i class="fa fa-picture-o"></i>Enquete</a>
+        </li>
+      <?php endif; ?>
+
     </ul>
   </div>
 </div>
