--- a/src/app/admin/views/survey_save.phtml
+++ b/src/app/admin/views/survey_save.phtml
@@ -33,6 +33,35 @@
 
           {$URI}
 
+          <fieldset class="duplication_container">
+            <?php if ( count($data['table']['question']) ): ?>
+              <?php foreach ( $data['table']['question'] as $question ): ?>
+                <div class="form-group">
+                  <label class="col-sm-2 control-label">Questão</label>
+                  <div class="col-sm-10">
+                    <input name="question[<?php echo $question['id_survey_question']; ?>]" type="text" value="<?php echo $question['question']; ?>" placeholder="Questão" class="form-control">
+                  </div>
+                </div>
+              <?php endforeach; ?>
+            <?php else: ?>
+              <div class="duplicate_part">
+                <div class="form-group">
+                  <label class="col-sm-2 control-label">Questão</label>
+                  <div class="col-sm-10">
+                    <input name="question[]" type="text" value="" placeholder="Título" class="form-control">
+                  </div>
+                </div>
+              </div>
+              <div class="form-group">
+                <label class="col-sm-2 control-label"></label>
+                <div class="col-sm-10">
+                  <a class="add" style="cursor:pointer">ADICIONAR</a>
+                  <a class="del" style="cursor:pointer; display:none">REMOVER</a>
+                </div>
+              </div>
+            <?php endif; ?>
+          </fieldset>
+
           {$SUBMIT}
 
         </form>
