--- a/src/app/admin/views/video_save.phtml
+++ b/src/app/admin/views/video_save.phtml
@@ -66,7 +66,7 @@
           <div class="form-group">
             <label class="col-sm-2 control-label">Relação Tags</label>
             <div class="col-sm-4">
-              <input name="tags" type="hidden" value="" style="width: 300px;" id="tag" class="select2-ajax"/>
+              <input name="tags" type="hidden" value="<?php echo $data['table']['id_video']; ?>" style="width: 300px;" id="tag" class="select2-ajax"/>
             </div>
           </div>
 
