--- a/src/app/admin/views/news_save.phtml
+++ b/src/app/admin/views/news_save.phtml
@@ -76,6 +76,17 @@
           </div>
 
           <div class="form-group">
+            <label class="col-sm-2 control-label">Fotos Relacionadas</label>
+            <div class="col-sm-10">
+              <input name="photo" type="hidden" style="width: 100%;" value="<?php echo $data['table']['id_news']; ?>" id="news" class="select2-static"/>
+              <span class="select2-btns">
+                <button class="btn btn-info btn-rad select2-btn-all" type="button">Adicionar todos</button>
+                <button class="btn btn-warning btn-rad select2-btn-clear" type="button">Remover todos</button>
+              </span>
+            </div>
+          </div>
+
+          <div class="form-group">
             <label class="col-sm-2 control-label">Vídeos Relacionados</label>
             <div class="col-sm-10">
               <?php echo $data['table']['r_news_video'] ?>
