--- a/src/app/admin/views/news_save.phtml
+++ b/src/app/admin/views/news_save.phtml
@@ -71,13 +71,6 @@
           <div class="form-group">
             <label class="col-sm-2 control-label">Fotos Relacionadas</label>
             <div class="col-sm-10">
-              <?php echo $data['table']['r_news_photo'] ?>
-            </div>
-          </div>
-
-          <div class="form-group">
-            <label class="col-sm-2 control-label">Fotos Relacionadas</label>
-            <div class="col-sm-10">
               <input name="photo" type="hidden" style="width: 100%;" value="<?php echo $data['table']['id_news']; ?>" id="news" class="select2-static"/>
               <span class="select2-btns">
                 <button class="btn btn-info btn-rad select2-btn-all" type="button">Adicionar todos</button>
@@ -87,9 +80,13 @@
           </div>
 
           <div class="form-group">
-            <label class="col-sm-2 control-label">Vídeos Relacionados</label>
+            <label class="col-sm-2 control-label">Vídeos Relacionadas</label>
             <div class="col-sm-10">
-              <?php echo $data['table']['r_news_video'] ?>
+              <input name="video" type="hidden" style="width: 100%;" value="<?php echo $data['table']['id_news']; ?>" id="news" class="select2-static"/>
+              <span class="select2-btns">
+                <button class="btn btn-info btn-rad select2-btn-all" type="button">Adicionar todos</button>
+                <button class="btn btn-warning btn-rad select2-btn-clear" type="button">Remover todos</button>
+              </span>
             </div>
           </div>
 
