--- a/src/app/admin/views/video_save.phtml
+++ b/src/app/admin/views/video_save.phtml
@@ -68,7 +68,7 @@
             <div class="col-sm-10">
               <input name="tag" type="hidden" style="width: 100%;" value="<?php echo $data['table']['id_video']; ?>" id="video" class="select2-ajax"/>
               <span class="select2-btns">
-                <button class="btn btn-info btn-rad" type="button">Adicionar todos</button>
+                <button class="btn btn-info btn-rad select2-btn-all" type="button">Adicionar todos</button>
                 <button class="btn btn-warning btn-rad select2-btn-clear" type="button">Remover todos</button>
               </span>
             </div>
