--- a/src/app/admin/views/mailing_save.phtml
+++ b/src/app/admin/views/mailing_save.phtml
@@ -18,6 +18,17 @@
           {$SUBMIT}
 
           <div class="form-group">
+            <label class="col-sm-2 control-label">Grupo</label>
+            <div class="col-sm-10">
+              <input name="mailing_group" type="hidden" style="width: 100%;" value="<?php echo $data['table']['id_mailing']; ?>" id="mailing" class="select2-ajax"/>
+              <span class="select2-btns">
+                <button class="btn btn-info btn-rad select2-btn-all" type="button">Adicionar todos</button>
+                <button class="btn btn-warning btn-rad select2-btn-clear" type="button">Remover todos</button>
+              </span>
+            </div>
+          </div>
+
+          <div class="form-group">
             <label class="col-sm-2 control-label">Nome</label>
             <div class="col-sm-10">
               <input name="name" type="text" value="<?php echo $data['table']['name']; ?>" placeholder="Nome" class="limit_text form-control" maxlength="255">
