--- a/src/app/admin/views/mailing_list.phtml
+++ b/src/app/admin/views/mailing_list.phtml
@@ -18,6 +18,9 @@
           <div class="col-sm-4 col-md-4 col-lg-2">
             <input class="form-control" name="email" type="text" placeholder="Busca por email" value="<?php echo $data['search']['email']; ?>">
           </div>
+          <div class="col-sm-4 col-md-4 col-lg-2">
+            <?php echo $data['search']['mailing_group']; ?>
+          </div>
           <input type="button" value="Limpar" class="clean_search btn btn-default btn-rad" />
           <input type="submit" value="Buscar" class="btn btn-info btn-rad" />
         </form>
