--- a/src/app/admin/views/admin_save.phtml
+++ b/src/app/admin/views/admin_save.phtml
@@ -27,21 +27,21 @@
           <div class="form-group">
             <label class="col-sm-2 control-label">Nome</label>
             <div class="col-sm-10">
-              <input name="name" type="text" value="<?php echo $data['table']['name']; ?>" placeholder="Seu nome" class="form-control">
+              <input name="name" type="text" value="<?php echo $data['table']['name']; ?>" placeholder="Seu nome" class="form-control limit_text" maxlength="70">
             </div>
           </div>
 
           <div class="form-group">
             <label class="col-sm-2 control-label">E-mail</label>
             <div class="col-sm-10">
-              <input name="email" type="text" value="<?php echo $data['table']['email']; ?>" placeholder="Seu e-mail, ele será usado para o login" class="form-control">
+              <input name="email" type="text" value="<?php echo $data['table']['email']; ?>" placeholder="Seu e-mail, ele será usado para o login" class="form-control limit_text" maxlength="70">
             </div>
           </div>
 
           <div class="form-group">
             <label class="col-sm-2 control-label">Senha</label>
             <div class="col-sm-10">
-              <input name="password" class="form-control" type="password" value="" />
+              <input name="password" class="form-control limit_text" type="password" value="" maxlength="16" />
             </div>
           </div>
 
