--- a/src/app/admin/views/settings_save.phtml
+++ b/src/app/admin/views/settings_save.phtml
@@ -20,42 +20,48 @@
           <div class="form-group">
             <label class="col-sm-2 control-label">Título Home</label>
             <div class="col-sm-10">
-              <input name="home_title" type="text" value="<?php echo $data['table']['home_title']; ?>" placeholder="Título da home" class="form-control">
+              <input name="home_title" type="text" value="<?php echo $data['table']['home_title']; ?>" placeholder="Título da home" class="form-control limit_text" maxlength="69">
+              <div class="limit_info"></div>
             </div>
           </div>
 
           <div class="form-group">
             <label class="col-sm-2 control-label">Description Home</label>
             <div class="col-sm-10">
-              <textarea name="home_description" class="form-control" rows="4" placeholder="Descrição da home"><?php echo $data['table']['home_description']; ?></textarea>
+              <textarea name="home_description" class="form-control limit_text" maxlength="156" rows="4" placeholder="Descrição da home"><?php echo $data['table']['home_description']; ?></textarea>
+              <div class="limit_info"></div>
             </div>
           </div>
 
           <div class="form-group">
             <label class="col-sm-2 control-label">Keywords Home</label>
             <div class="col-sm-10">
-              <input name="home_keywords" class="tags" type="hidden" value="<?php echo $data['table']['home_keywords']; ?>" />
+              <input name="home_keywords" class="tags" maxlength="255" type="hidden" value="<?php echo $data['table']['home_keywords']; ?>" />
+              <div class="limit_info"></div>
             </div>
           </div>
 
           <div class="form-group">
             <label class="col-sm-2 control-label">Título Internas</label>
             <div class="col-sm-10">
-              <input name="title" type="text" value="<?php echo $data['table']['title']; ?>" placeholder="Título das páginas internas" class="form-control">
+              <input name="title" type="text" value="<?php echo $data['table']['title']; ?>" placeholder="Título das páginas internas" class="form-control limit_text" maxlength="69">
+              <div class="limit_info"></div>
             </div>
           </div>
 
           <div class="form-group">
             <label class="col-sm-2 control-label">Description Internas</label>
             <div class="col-sm-10">
-              <textarea name="description" class="form-control" rows="4" placeholder="Descrição das páginas internas"><?php echo $data['table']['description']; ?></textarea>
+              <textarea name="description" class="form-control limit_text" maxlength="156" rows="4" placeholder="Descrição das páginas internas"><?php echo $data['table']['description']; ?></textarea>
+              <div class="limit_info"></div>
             </div>
           </div>
 
           <div class="form-group">
             <label class="col-sm-2 control-label">Keywords Interna</label>
             <div class="col-sm-10">
-              <input name="keywords" class="tags" type="hidden" value="<?php echo $data['table']['keywords']; ?>" />
+              <input name="keywords" class="tags" maxlength="255" type="hidden" value="<?php echo $data['table']['keywords']; ?>" />
+              <div class="limit_info"></div>
             </div>
           </div>
 
