--- a/src/app/Admin/Views/includes/active.phtml
+++ b/src/app/Admin/Views/includes/active.phtml
@@ -1,4 +1,4 @@
-<?php if ( array_key_exists('is_active', $data['table']) ): ?>
+<?php if ( isset($data['table']) && array_key_exists('is_active', $data['table']) ): ?>
   <div class="form-group">
     <label class="col-sm-2 control-label" for="active">Ativo</label>
     <div class="col-sm-10">
